# ohg-scribe

./: .gitattributes  .gitignore  README.md  ohg-scribe-options-v2.html  ohg-scribe-vocab-manager.html  package-lock.json  package.json
.github/workflows/: build.yml
examples/: Semaglutide Lexicon.csv  agent_output.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  convert.rs  history.rs  lemur.rs  mod.rs  presets.rs  settings.rs  transcribe.rs  vocabulary.rs  vocabulary_extract.rs
src-tauri/vocabularies/system/: cardiology.json  immunology.json  neurology.json  oncology.json
src/lib/: types.ts
src/lib/components/: DropZone.svelte  FileItem.svelte  FileQueue.svelte  HistoryPanel.svelte  OptionsPanel.svelte  RefinePanel.svelte  SettingsModal.svelte  Sidebar.svelte  SpeakerControls.svelte  SpeakerEditModal.svelte  Toast.svelte
src/lib/components/options/: AnalysisSection.svelte  PresetTag.svelte  SpeakersSection.svelte  ToggleSwitch.svelte  VocabPresetDropdown.svelte  VocabularySection.svelte
src/lib/components/vocabulary-manager/: ExtractFromDocument.svelte  VocabularyManager.svelte
src/lib/data/: personas.ts  styles.ts  templates.ts
src/lib/services/: ai.ts  docx-export.ts  history.ts  presets.ts  transcription.ts  updater.ts
src/lib/stores/: options.ts  queue.ts  vocabulary.ts  workspace.ts
src/lib/types/: minutes.ts  vocabulary.ts
src/lib/utils/: lexicon-parser.ts
src/routes/: +layout.svelte  +page.svelte
(+12 files in other folders)
