[package]
name = "ohg-scribe"
version = "0.1.0"
description = "OHG Scribe - Desktop transcription application"
authors = ["you"]
edition = "2021"

[lib]
name = "ohg_scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.43", features = ["serde"] }
docx-rs = "0.4"
zip = "0.6"
quick-xml = "0.36"
pdf-extract = "0.7"

